Add basic benchmark as a `--test` option
Standardized benchmarks are hard! Since we most often want to use
benchmarks in an ad-hoc fashion, can build it directly into the main
binary as a `--test` option (a new test mode).

The benchmark mechanism is implementation totally transparently to all
the internals, and operates exclusively on the `PassManager`. It
executes a benchmark for each pass.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/3998, branch: user/amscanne/map_pipelines2/3

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,10 @@ set_target_properties(libbpftrace PROPERTIES PREFIX "")
 
 add_executable(bpftrace
   main.cpp
+  benchmark.cpp
 )
+find_package(benchmark REQUIRED)
+target_link_libraries(bpftrace benchmark::benchmark)
 
 # TODO: Honor `STATIC_LINKING` properly.
 if(LIBBLAZESYM_FOUND)
