cleanup: split `types.h` into logical subfiles
Similar to utilities, the header had likely grown over time organically
and become a bit of a kitchener sink. This commit splits this header
into logical locations, including new `probe_types.(cpp|h)` files.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/3962, branch: user/amscanne/sized_type_cleanup/6

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(runtime STATIC
   log.cpp
   output.cpp
   probe_matcher.cpp
+  probe_types.cpp
   procmon.cpp
   printf.cpp
   run_bpftrace.cpp
