ast: Implement map "de-sugaring" as a separate pass
In order to simplify and standardize code generation, implement an early
pass that desugars map syntax, and starts to handle code paths are
currently pushed back to code generation.

There are three major things done here, which are somewhat entangled.

1) Always fill in default keys.

Currently, code generation will transparently fill in the keys for
scalar maps, e.g. `@x` becomes an array map of size 1.

Since this will be automatically recognized as a scalar map, we simply
desugar this statement by doing `@x[0]` for that first case. All error
messages will be unified aroud paths where maps diverge for any reason,
e.g. `@x = 1; @x["foo"] = 1`.

2) Split map accesses into explicit reads `MapAccess` and writes
   `AssignMapStatement`. Both of these require explicit keys.

(Note that in the future we could make assignments an expression also,
but this should come after fixing up some of the code generation
semantics to make this a bit cleaner.)

This removes a lot of the special cases in the semantic analyzer (e.g.
`skip_map_key_validation`, `is_read`) because these are simply different
node in the tree explicitly.

3) Turn `@x[0] = avg()` into `avg(@x, 0)`.

The only way to avoid the map `@x` being desugared into `@x[0]` is to
use it in the context of a special assignment. These will be split into
the map argument and the key expression, and passed to the function.

The semantic analyser is able to infer the map type from the hard-coded
function prototypes for these special functions. In the future, we can
extend this inference to non-hard-coded functions.

This has the biggest effect on internals, and allows us to drop the
inverted pointers (e.g. `Expression->map`), since code generation will
have all the context required to emit the necessary code.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/3988, branch: user/amscanne/map_pipelines/8

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(ast STATIC
   passes/field_analyser.cpp
   passes/fold_literals.cpp
   passes/link.cpp
+  passes/map_sugar.cpp
   passes/portability_analyser.cpp
   passes/printer.cpp
   passes/probe_analyser.cpp
