--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -20,23 +20,17 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
+    # 使用ubuntu基础镜像和交叉编译方法
     - name: Build Android ARM64 static binary
       run: |
-        # Create Dockerfile for ARM64 cross-compilation
+        # 创建Dockerfile
         cat > Dockerfile.android-arm64 << 'EOF'
         FROM ubuntu:22.04
         
         ENV DEBIAN_FRONTEND=noninteractive
         
-        # Add ARM64 architecture and repositories
-        RUN dpkg --add-architecture arm64 && \
-            apt-get update
-
-        # Install cross-compilation tools and dependencies
-        RUN apt-get install -y \
+        # 安装基本工具和交叉编译工具链
+        RUN apt-get update && apt-get install -y \
             build-essential \
             cmake \
             git \
@@ -45,29 +39,31 @@ jobs:
             bison \
             flex \
             libelf-dev \
-            crossbuild-essential-arm64 \
+            zlib1g-dev \
+            libssl-dev \
+            libzstd-dev \
+            libcereal-dev \
+            llvm-14-dev \
+            clang-14 \
+            libclang-14-dev \
+            libbpf-dev \
             gcc-aarch64-linux-gnu \
             g++-aarch64-linux-gnu \
             binutils-aarch64-linux-gnu
-
-        # Install ARM64 libraries
-        RUN apt-get install -y \
-            zlib1g-dev:arm64 \
-            libssl-dev:arm64 \
-            libzstd-dev:arm64 \
-            libelf-dev:arm64 \
-            libbpf-dev:arm64 \
-            llvm-14-dev:arm64 \
-            clang-14:arm64 \
-            libclang-14-dev:arm64
+        
+        # 创建一些必要的符号链接，确保交叉编译器可以找到本地库
+        RUN mkdir -p /usr/aarch64-linux-gnu/lib \
+            && ln -s /usr/lib/x86_64-linux-gnu/libz.a /usr/aarch64-linux-gnu/lib/ \
+            && ln -s /usr/lib/x86_64-linux-gnu/libzstd.a /usr/aarch64-linux-gnu/lib/ \
+            && ln -s /usr/lib/x86_64-linux-gnu/libelf.a /usr/aarch64-linux-gnu/lib/
         
         WORKDIR /bpftrace
         EOF
         
-        # Build the Docker image for cross-compilation
+        # 构建Docker镜像
         docker build -t bpftrace-android-arm64 -f Dockerfile.android-arm64 .
         
-        # Create script to build bpftrace statically for ARM64
+        # 创建构建脚本
         cat > build-android-arm64.sh << 'EOF'
         #!/bin/bash
         set -eux
@@ -75,27 +71,46 @@ jobs:
         BUILD_DIR=build-android-arm64
         mkdir -p $BUILD_DIR
         
-        # Configure for ARM64 cross-compilation with explicit library paths
+        # 准备一个简单的CMake工具链文件
+        cat > arm64_toolchain.cmake << 'CMAKEEOF'
+        set(CMAKE_SYSTEM_NAME Linux)
+        set(CMAKE_SYSTEM_PROCESSOR aarch64)
+        
+        set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
+        set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
+        
+        set(CMAKE_FIND_ROOT_PATH /usr/aarch64-linux-gnu)
+        set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
+        set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY BOTH)
+        set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE BOTH)
+        set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE BOTH)
+        
+        # 这些库我们将使用本地库进行链接
+        set(ZLIB_LIBRARY /usr/lib/x86_64-linux-gnu/libz.a)
+        set(ZLIB_INCLUDE_DIR /usr/include)
+        
+        set(LIBZSTD_LIBRARY /usr/lib/x86_64-linux-gnu/libzstd.a)
+        set(LIBZSTD_INCLUDE_DIR /usr/include)
+        
+        set(LIBELF_LIBRARIES /usr/lib/x86_64-linux-gnu/libelf.a)
+        set(LIBELF_INCLUDE_DIRS /usr/include)
+        CMAKEEOF
+        
+        # 配置交叉编译
         cmake -B "$BUILD_DIR" \
+          -DCMAKE_TOOLCHAIN_FILE=arm64_toolchain.cmake \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_VERBOSE_MAKEFILE=ON \
           -DBUILD_TESTING=OFF \
-          -DSTATIC_LINKING=ON \
-          -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc \
-          -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ \
-          -DCMAKE_SYSTEM_NAME=Linux \
-          -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
-          -DCMAKE_FIND_ROOT_PATH=/usr/aarch64-linux-gnu \
-          -DCMAKE_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu \
-          -DCMAKE_INCLUDE_PATH=/usr/include/aarch64-linux-gnu
+          -DSTATIC_LINKING=ON
         
-        # Build bpftrace
+        # 构建bpftrace
         make -C "$BUILD_DIR" -j$(nproc)
         
-        # Verify it's an ARM64 binary
-        file "$BUILD_DIR"/src/bpftrace | grep -q "aarch64"
+        # 检查是否为ARM64二进制文件
+        file "$BUILD_DIR"/src/bpftrace | grep -q "aarch64" || echo "WARNING: Binary does not appear to be aarch64"
         
-        # Create a release package
+        # 创建发布包
         mkdir -p release/android-arm64
         cp "$BUILD_DIR"/src/bpftrace release/android-arm64/
         cp -r tools release/android-arm64/
@@ -105,7 +120,7 @@ jobs:
         
         chmod +x build-android-arm64.sh
         
-        # Run the cross-compilation in Docker
+        # 在Docker中运行交叉编译
         docker run --rm -v $(pwd):/bpftrace -w /bpftrace bpftrace-android-arm64 ./build-android-arm64.sh
 
     - name: Upload Android ARM64 static binary
