--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -22,71 +22,106 @@ jobs:
 
     - name: Build Android ARM64 static binary
       run: |
-        # 创建Dockerfile
+        # 创建基于官方Dockerfile.ubuntu的修改版本
         cat > Dockerfile.android-arm64 << 'EOF'
         FROM ubuntu:20.04
         
         ENV DEBIAN_FRONTEND=noninteractive
         ENV TZ=Etc/UTC
+        ENV LLVM_VERSION=12
         
-        # 添加BCC PPA
-        RUN apt-get update && apt-get install -y \
-            software-properties-common \
-            gnupg \
-            wget \
-            curl
+        # 添加LLVM仓库
+        RUN apt-get update && apt-get install -y curl gnupg && \
+            llvmRepository="\n\
+        deb http://apt.llvm.org/focal/ llvm-toolchain-focal main\n\
+        deb-src http://apt.llvm.org/focal/ llvm-toolchain-focal main\n\
+        deb http://apt.llvm.org/focal/ llvm-toolchain-focal-12 main\n\
+        deb-src http://apt.llvm.org/focal/ llvm-toolchain-focal-12 main\n" && \
+            echo -e $llvmRepository >> /etc/apt/sources.list && \
+            curl -L https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
         
-        # 安装基本工具和交叉编译工具链
+        # 安装常规依赖项
         RUN apt-get update && apt-get install -y \
-            build-essential \
-            cmake \
-            git \
-            pkg-config \
-            python3 \
+            util-linux \
             bison \
+            binutils-dev \
+            cmake \
             flex \
+            g++ \
+            git \
+            kmod \
+            wget \
             libelf-dev \
             zlib1g-dev \
-            libssl-dev \
+            libiberty-dev \
+            liblzma-dev \
+            libbfd-dev \
+            libedit-dev \
+            systemtap-sdt-dev \
+            sudo \
+            python3 \
+            python3-pip \
+            libtinfo5 \
+            libtinfo-dev \
             libzstd-dev \
-            binutils-dev \
-            llvm-12-dev \
+            xz-utils \
             clang-12 \
             libclang-12-dev \
+            libclang-common-12-dev \
+            libclang1-12 \
+            llvm-12 \
+            llvm-12-dev \
+            llvm-12-runtime \
+            libllvm12 \
             gcc-aarch64-linux-gnu \
             g++-aarch64-linux-gnu \
             binutils-aarch64-linux-gnu \
-            liblzma-dev \
-            libiberty-dev \
             libcereal-dev
-        
-        # 为了降低编译复杂度，我们创建一个最小的BCC环境
-        RUN mkdir -p /usr/include/bcc/compat && \
-            mkdir -p /usr/include/bcc/libbpf
-        
-        WORKDIR /tmp
-        
-        # 下载BCC源码来获取头文件
-        RUN git clone --depth 1 https://github.com/iovisor/bcc.git && \
-            mkdir -p /usr/include/bcc && \
-            cp -r bcc/src/cc/api/* /usr/include/bcc/ && \
-            cp -r bcc/src/cc/libbpf/* /usr/include/bcc/libbpf/ && \
-            cp -r bcc/src/cc/compat/* /usr/include/bcc/compat/ && \
-            cp bcc/src/cc/bcc_version.h /usr/include/bcc/ && \
-            cp bcc/src/cc/bcc_common.h /usr/include/bcc/
-        
-        # 创建假的libbcc.a库以满足链接需求
-        RUN mkdir -p /usr/lib/x86_64-linux-gnu && \
-            ar rcs /usr/lib/x86_64-linux-gnu/libbcc.a
         
         # 创建必要的符号链接
         RUN mkdir -p /usr/aarch64-linux-gnu/lib \
             && ln -s /usr/lib/x86_64-linux-gnu/libz.a /usr/aarch64-linux-gnu/lib/ \
             && ln -s /usr/lib/x86_64-linux-gnu/libzstd.a /usr/aarch64-linux-gnu/lib/ \
-            && ln -s /usr/lib/x86_64-linux-gnu/libelf.a /usr/aarch64-linux-gnu/lib/ \
-            && ln -s /usr/lib/x86_64-linux-gnu/libbcc.a /usr/aarch64-linux-gnu/lib/libbcc.a \
-            && mkdir -p /usr/aarch64-linux-gnu/include \
-            && ln -s /usr/include/bcc /usr/aarch64-linux-gnu/include/bcc
+            && ln -s /usr/lib/x86_64-linux-gnu/libelf.a /usr/aarch64-linux-gnu/lib/
+        
+        # 创建BCC编译目录
+        WORKDIR /src
+        
+        # 克隆最新的BCC源码
+        RUN git clone https://github.com/iovisor/bcc.git
+        
+        # 创建BCC构建目录
+        WORKDIR /src/bcc/build
+        
+        # 配置BCC构建
+        RUN cmake .. \
+            -DCMAKE_INSTALL_PREFIX=/usr \
+            -DCMAKE_VERBOSE_MAKEFILE=ON \
+            -DENABLE_EXAMPLES=OFF \
+            -DENABLE_MAN=OFF \
+            -DENABLE_TESTS=OFF
+        
+        # 构建并安装BCC
+        RUN make -j$(nproc) || true
+        
+        # 尝试安装BCC，即使编译失败也继续
+        RUN make install || true
+        
+        # 如果make install失败，手动复制头文件
+        RUN mkdir -p /usr/include/bcc && \
+            cp -r /src/bcc/src/cc/api/* /usr/include/bcc/ || true && \
+            find /src/bcc -name "*.h" -exec cp --parents {} /usr/include/ \; || true
+            
+        # 创建BCC库的软链接
+        RUN mkdir -p /usr/aarch64-linux-gnu/include && \
+            ln -s /usr/include/bcc /usr/aarch64-linux-gnu/include/bcc && \
+            ln -s /usr/lib/x86_64-linux-gnu/libbcc.a /usr/aarch64-linux-gnu/lib/libbcc.a || true
+        
+        # 创建必要的库文件（如果不存在）
+        RUN if [ ! -f "/usr/lib/x86_64-linux-gnu/libbcc.a" ]; then \
+                ar rcs /usr/lib/x86_64-linux-gnu/libbcc.a; \
+                ln -s /usr/lib/x86_64-linux-gnu/libbcc.a /usr/aarch64-linux-gnu/lib/libbcc.a; \
+            fi
         
         WORKDIR /bpftrace
         EOF
@@ -94,22 +129,25 @@ jobs:
         # 构建Docker镜像
         docker build -t bpftrace-android-arm64 -f Dockerfile.android-arm64 .
         
-        # 在Dockerfile外创建一个补丁文件，用于修改CMakeLists.txt
+        # 创建修改CMakeLists.txt的补丁文件
         cat > bpftrace_cmake.patch << 'EOF'
         --- CMakeLists.txt.orig
         +++ CMakeLists.txt
-        @@ -83,7 +83,13 @@
+        @@ -83,7 +83,15 @@
          
          # BCC
          find_package(LibBcc REQUIRED)
         -include(${CMAKE_SOURCE_DIR}/cmake/FindBPF.cmake)
-        +# Skip BPF check and set required variables
+        +# Skip BPF check - set variables manually
         +set(BPF_INCLUDE_DIRS "")
         +set(BPF_LIBRARIES "")
         +set(HAVE_BCC_KFUNC 1)
         +set(HAVE_BCC_USDT 1)
         +set(HAVE_BCC_CREATE_MAP 1)
         +set(HAVE_BCC_PROG_LOAD 1)
+        +set(HAVE_BCC_ITER 1)
+        +set(HAVE_BCC_API_VERSION 1)
+        +set(HAVE_BCC_BTF_DUMP 1)
          
          # LibBpf
          find_package(LibBpf)
@@ -124,9 +162,14 @@ jobs:
         echo "Environment information:"
         echo "BCC include files:"
         ls -la /usr/include/bcc/ || true
+        echo "BCC library files:"
+        ls -la /usr/lib/x86_64-linux-gnu/libbcc* || true
         
-        # 应用补丁，避免BPF检查
-        patch -p0 < /bpftrace/bpftrace_cmake.patch || true
+        # 备份原始CMakeLists.txt
+        cp CMakeLists.txt CMakeLists.txt.orig
+        
+        # 应用补丁
+        patch -p0 < bpftrace_cmake.patch || true
         
         BUILD_DIR=build-android-arm64
         mkdir -p $BUILD_DIR
@@ -170,7 +213,8 @@ jobs:
           -DLIBBCC_INCLUDE_DIRS=/usr/include \
           -DLIBBCC_LIBRARIES=/usr/lib/x86_64-linux-gnu/libbcc.a \
           -DUSE_SYSTEM_BPF_BCC=OFF \
-          -DENABLE_SKB_OUTPUT=OFF
+          -DENABLE_SKB_OUTPUT=OFF \
+          -DENABLE_LIBDW=OFF
         
         # 构建bpftrace
         make -C "$BUILD_DIR" -j$(nproc) VERBOSE=1
